--- a/css/style.css
+++ b/css/style.css
@@ -24,10 +24,18 @@ body{
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
 }
-@media (prefers-color-scheme: dark) { 
-    body{
+
+@media (prefers-color-scheme: dark) {
+    body { 
+        background: #333; 
         color: #000;
-        background-color: #FFF;
+    }
+  }
+  
+@media (prefers-color-scheme: light) {
+    body { 
+        background: #FFF; 
+        color: #000;
     }
 }
 a,button, .burger{
