--- a/css/style.css
+++ b/css/style.css
@@ -30,9 +30,6 @@ body{
         background: #333; 
         color: #000;
     }
-    a,button, .burger{
-        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);    /* убирает подсветку */
-    }
     .header {
         background-color:rgba(255, 255, 255, 0.861);
     }
@@ -58,8 +55,29 @@ body{
   
 @media (prefers-color-scheme: light) {
     body { 
-        background: #FFF; 
+        background: #333; 
         color: #000;
+    }
+    .header {
+        background-color:rgba(255, 255, 255, 0.861);
+    }
+    .header__link {
+        color: #000;
+    }
+    .header__link:hover::before{
+        background-color: #99999933;
+    }
+    .dropdown__container{
+        background: linear-gradient(rgba(255, 255, 255, 0.861),#eceff1e5);
+    }
+    .dropdown__link{
+        color: #000;
+    }
+    .dropdown__link:hover{
+        background-color: #99999933;
+    }
+    .dropdown__link:active{
+        background-color: #9999993b;
     }
 }
 a,button, .burger{
